bugs fixed in sop lessons management.